# ECE421Group12

./: .gitignore  CODEOWNERS
project1/: NOTES.md
project1/StockMarketMonitor/: .project  makefile
project1/StockMarketMonitor/src/: module-info.java
project1/StockMarketMonitor/src/group12/core/: APIFinance.java  PickShareFunctional.java  PickShareImperative.java  ShareInfo.java  ShareUtil.java  Shares.java
project1/StockMarketMonitor/src/group12/functional/: HelloWorld.java
project2/self_balancing_tree/: Cargo.toml
project2/self_balancing_tree/benches/: benchmark.rs
project2/self_balancing_tree/src/: avl.rs  cli.rs  main.rs  readbt.rs  red_black.rs  test_avl.rs  test_red_black.rs
project3/connect4_backend/: Cargo.toml
project3/connect4_backend/src/: main.rs
project3/connect4_backend/src/api/: game_api.rs  mod.rs
project3/connect4_backend/src/models/: game_model.rs  mod.rs
project3/connect4_backend/src/repository/: mongodb_repo.rs
project3/connect4_frontend/: Cargo.toml  index.html
project3/connect4_frontend/src/: ai.rs  board.rs  boardgame.rs  chip.rs  connect4.rs  connect4ai.rs  fsm.rs  main.rs  models.rs  requests.rs  toai.rs
project3/connect4_frontend/src/components/: button_input.rs  mod.rs  table.rs  text_input.rs
project3/connect4_frontend/src/components/routes/: connect3human.rs  connect4comp.rs  connect4human.rs  history.rs  home.rs  howToC4.rs  howToOtto.rs  mod.rs  ottoComp.rs  ottoHuman.rs  score.rs
project3/connect4_frontend/src/env/: vars.rs
project3/connect4_frontend/src/styles/: global.css  nav.css
(+1 files in other folders)
