[package]
name = "connect4_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

rand = "0.8.5"
yew-router = "0.17"
tokio = "1.27.0"
reqwest = "0.11.16"
wasm-bindgen = "0.2.84"
stylist = {version = "0.12.0", features =["yew_integration","yew_use_media_query"]}
web-sys = "0.3.61"
getrandom = { version = "0.2", features = ["js"]}
gloo-console = "0.2.3"
